# C-gs2-interpreter

./: .gitignore  Progress.md  README.md  meson.build
.github/workflows/: ci.yml
inc/: block.hpp  command.hpp  commands.hpp  gs2context.hpp  gs2exception.hpp  list.hpp  utils.hpp  value.hpp
src/: block.cpp  command.cpp  commands.cpp  gs2context.cpp  list.cpp  main.cpp  utils.cpp  value.cpp
subprojects/: cli11.wrap
test/: block-tests.cpp  command-tests.cpp  meson.build  utils-tests.cpp
